# V93XX_Arduino

./: .clang-format  .gitignore  .pre-commit-config.yaml  DEBUGGING_TOOLKIT_COMPLETE.md  Include.h  README.md  REFACTORING_COMPLETE.md  Raccoon.c  Raccoon.cpp  Raccoon.h  V9381_UART_FIX_SUMMARY.md  V93XX_Energy.cpp  V93XX_Include.h  V93XX_Raccoon.cpp  V93XX_Raccoon.h  V93XX_Raccoon_registers.h  V93XX_Registers.h  V93XX_SPI.cpp  V93XX_SPI.h  V93XX_UART.cpp  V93XX_UART.h  V93XX_UART_registers.h  library.properties  pyproject.toml  run_debug.bat  run_debug.ps1
.github/: copilot-instructions.md
.github/workflows/: githubci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COPILOT.md  DATASHEET_V93XX.md  GETTING_STARTED.md  INTEGRATION.md  PR_UPDATE.md  README.md  REGISTER_REFACTORING.md  STATUS.md  TESTING.md  UART_CHECKSUM_MODE.md  V93XX_COMMON_PATTERNS.md  V93XX_PINS.md  V93XX_REGISTER_MAP.md  V93XX_UART.md
examples/V9360_UART/: README.md  V9360_UART.ino
examples/V9360_UART_FFT/: FFT_PLAN.md  README.md  V9360_UART_FFT.ino
examples/V9360_UART_WAVEFORM/: README.md  V9360_UART_WAVEFORM.ino
examples/V9381_SPI/: DATASHEET_SPI.md  README.md  SPI_Transactions.csv  (+2 more)
tools/: AUTOMATION_SUMMARY.md  CHECKSUM_MODE_TESTING.md  DEBUG_GUIDE.md  QUICK_START.md  README.md  analyze_checksum_captures.py  analyze_spi_csv.py  automated_uart_debug.py  capture_v9381_spi.py  capture_v9381_uart.py  logic2_automation.py  monitor_serial.py  monitor_uart.py  orchestrate_debug.py  plot_v9360_waveform.py  run_automated_tests.ps1  test_checksum_mode.py  uart_diagnostics.py  verify_setup.py
(+13 files in other folders)
