[project]
name = "v93xx-arduino"
version = "0.1.0"
description = "Arduino library with ancillary Python tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logic2-automation>=1.0.11",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]
